# car-mcp

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
car_mcp/: config.py
car_mcp/agent/: agent.py  local_ollama.py
car_mcp/database/: data_generator.py  db_manager.py
car_mcp/mcp/: client.py  server.py
car_mcp/models/: car.py
scripts/: create_database.py
tests/: test_agent.py  test_mcp_client.py  test_mcp_server.py
