[project]
name = "car_mcp"
version = "0.1.0"
description = "Car search system with MCP protocol and virtual agent"
authors = [
  { name = "Thiago Sena", email = "thiagosena.dev@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy>=2.0.40,<3.0.0",
    "pandas>=2.2.3,<3.0.0",
    "faker>=37.1.0,<38.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "colorama>=0.4.6,<0.5.0",
    "langchain>=0.3.24,<0.4.0",
    "mcp[cli]>=1.6.0,<2.0.0",
    "faker-vehicle>=0.2.0,<0.3.0",
    "langchain-ollama>=0.3.2",
    "pytest-asyncio>=0.26.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3,<9.0.0",
    "flake8>=6.1.0,<7.0.0",
]

[tool.pytest.ini_options]
pythonpath = "."
addopts = "-p no:warnings"

[tool.coverage.run]
omit = ["car_mcp/database/data_generator.py"]
